# idaes-flowsheet-processor-ui

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
backend/: requirements.txt
backend/src/idaes_flowsheet_processor_ui/: main.py
backend/src/idaes_flowsheet_processor_ui/internal/: flowsheet_manager.py  get_extensions.py
backend/src/idaes_flowsheet_processor_ui/internal/tests/: test_flowsheet_manager.py  test_settings.py
backend/src/idaes_flowsheet_processor_ui/routers/: flowsheets.py
backend/src/idaes_flowsheet_processor_ui/routers/tests/: test_flowsheets.py
frontend/: package-lock.json  package.json
frontend/cypress/e2e/: FlowsheetTesting.cy.js  Flowsheets.js
frontend/src/: theme.js
frontend/src/assets/: util.js
frontend/src/components/OutputComparisonChart/: OutputComparisonChart.js
frontend/src/views/FlowsheetConfig/ConfigInput/: ConfigInput.js
website/: README.md  docusaurus.config.js  package-lock.json  sidebars.js
website/docs/About/: index.mdx
website/docs/Download/: idaes.mdx  prommis.mdx  watertap.mdx
website/docs/HowTo/: how_to_deploy_ui.mdx  how_to_export_flowsheet.mdx  how_to_use_ui.mdx
website/src/components/HomepageDescription/: index.js  styles.module.css
website/src/components/HomepageFeatures/: index.js  styles.module.css
website/src/components/HowToContent/: HowToDeploy.js  HowToRunOptimization.js  HowToRunSensitivityAnalysis.js  HowToUploadFlowsheet.js  HowToUseAbout.js  Troubleshooting.js
website/src/components/InstallerTable/: InstallerTable.js
website/src/css/: custom.css
website/src/pages/: index.js
