[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[project]
name = "idaes-flowsheet-processor-ui" 
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "aiofiles==23.2.1",
    "anyio==3.6.1",
    "asgiref==3.5.2",
    "certifi==2021.10.8",
    "click==8.1.3",
    "fastapi==0.110.0",
    "flexparser != 0.4",
    "h11==0.13.0",
    "idaes-pse",
    "idna==3.3",
    "parameter-sweep==0.1.dev5",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.5",
    "chardet",
    "pyyaml",
    "requests",
    "tinydb",
    "sniffio==1.2.0",
    "typing_extensions==4.9.0",
    "uvicorn==0.17.6",
    "importlib_resources==5.9.0",
    "idaes_flowsheet_processor @ git+https://github.com/watertap-org/idaes-flowsheet-processor.git",
]
[project.optional-dependencies]
testing = [
    "pytest >= 8",
]

[tool.setuptools.packages.find]
where = ["backend/src"]
exclude = ["frontend*"]

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/en/v8.1.0/extending/
version_scheme = "only-version"
local_scheme = "node-and-date"